--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -2175,8 +2175,11 @@
         "insights": "Ringkasan",
         "settings": "Pengaturan",
         "stale": "Tertunda",
+        "poll_error": "Error polling",
         "alerts_ack_visible": "Ack terlihat",
         "maintenance": "Maintenance",
+        "unmute": "Buka mute",
+        "unmuted": "Maintenance dibersihkan",
         "drag": "Geser untuk urutkan",
         "show_controls": "Tampilkan kontrol",
         "exit": "Keluar wallboard",
@@ -2259,6 +2262,11 @@
           "mute_30m": "Mute 30m",
           "mute_for": "Durasi mute",
           "apply_mute": "Mute"
+        },
+        "timeline": {
+          "title": "Timeline Insiden",
+          "subtitle": "20 event wallboard terbaru",
+          "empty": "Belum ada event terbaru."
         },
         "trend": {
           "up": "Naik",
